syntax = "proto3";
package storage;

option go_package = ".;storage";

message ProtoTrialSignup {
    string name = 1;
    string role = 2;
    string state = 3;
}

message ProtoRoleCount {
    string name = 1;
    uint64 count = 2;
    string emoji = 3;
}

message ProtoTrial {
    string name = 1;
    string state = 2;
    string announce_channel = 3;
    string announce_to = 9;
    string signup_channel = 4;
    string description = 7;

    map<string, uint64> role_counts = 5;
    repeated ProtoTrialSignup signups = 6;

    map<string, ProtoRoleCount> role_count_map = 8;

    repeated string role_sort_order = 10;
}